k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app
spec:
  selector:
    app: cloud-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
